feat: add buttons for rent and return item

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -7,7 +7,8 @@
 <body>
     <h1>Renting System</h1>
     {% block content%}
-    <a href="/store/">Go to store</a>
+    <p><a href="/store/">Go to store</a></p>
+    <p><a href="/manager/">Go to store manager</a></p>
     {% endblock %}
 </body>
 </html>
