feat: add login page

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -9,6 +9,8 @@
     {% block content%}
     <p><a href="/store/">Go to store</a></p>
     <p><a href="/manager/">Go to store manager</a></p>
+    <p><a href="/user/login">Login</a></p>
+    <p><a href="/user/register">Register</a></p>
     {% endblock %}
 </body>
 </html>
