feat: add link to home page in base.html

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Renting System</h1>
+    <p><a href="/">Home</a></p>
     {% block content%}
     <p><a href="/store/">Go to store</a></p>
     <p><a href="/manager/">Go to store manager</a></p>
