feat: add logout link

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -13,5 +13,6 @@
     <p><a href="/user/login">Login</a></p>
     <p><a href="/user/register">Register</a></p>
     {% endblock %}
+    <p><a href="/user/logout">Logout</a></p>
 </body>
 </html>
