--- a/frontend/flaskr/templates/login.html
+++ b/frontend/flaskr/templates/login.html
@@ -1,27 +1,52 @@
-{% extends "base.html"%}
+{% extends "base.html" %}
 
-{% block content%}
-<head>
-  <h4>Login</h4>
-</head>
-<body>
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username(size=32,placeholder="username") }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password(size=32,placeholder="password*$%!@") }}<br>
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
-    <p><a href="/user/register">Register</a></p>
-</body>
-
+{% block head%}
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css') }}">
 {% endblock %}
+
+{% block content %}
+<div class="login-container">
+    <div class="login-card">
+        <div class="login-header">
+            <h2>Welcome Back</h2>
+            <p>Sign in to your RentalHub account</p>
+        </div>
+
+        <form class="login-form" action="" method="post">
+            {{ form.hidden_tag() }}
+
+            <div class="form-group">
+                <label for="username">Username</label>
+                {{ form.username(class="form-input", id="username", placeholder="Enter your username") }}
+                <i class="fas fa-user"></i>
+                {% for error in form.username.errors %}
+                <div class="error-message">
+                    <i class="fas fa-exclamation-circle"></i>
+                    {{ error }}
+                </div>
+                {% endfor %}
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                {{ form.password(class="form-input", id="password", placeholder="Enter your password") }}
+                <i class="fas fa-lock"></i>
+                {% for error in form.password.errors %}
+                <div class="error-message">
+                    <i class="fas fa-exclamation-circle"></i>
+                    {{ error }}
+                </div>
+                {% endfor %}
+            </div>
+
+            {{ form.submit(class="login-btn", value="Sign In") }}
+        </form>
+
+        <div class="login-footer">
+            <p>Don't have an account? <a href="{{ url_for('user.register_view') }}" class="register-link">Create one here</a></p>
+            <a href="#" class="forgot-password">Forgot your password?</a>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
