feat: improve html code for base, login and registration

--- a/frontend/flaskr/static/styles/base.css
+++ b/frontend/flaskr/static/styles/base.css
@@ -36,6 +36,8 @@ body {
 }
 
 .logo {
+    text-decoration:none;
+    color:inherit;
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -143,6 +145,8 @@ body {
 }
 
 .footer-logo {
+    text-decoration:none;
+    color:inherit;
     display: flex;
     align-items: center;
     gap: 0.5rem;
