--- a/frontend/flaskr/static/styles/base.css
+++ b/frontend/flaskr/static/styles/base.css
@@ -348,6 +348,22 @@ html {
     scroll-behavior: smooth;
 }
 
+.flash-error {
+    background-color: #f8d7da;
+    color: #721c24;
+}
 
+.flash-success {
+    background-color: #d4edda;
+    color: #155724;
+}
 
+.flash-info {
+    background-color: #d1ecf1;
+    color: #0c5460;
+}
 
+.flash-warning {
+    background-color: #fff3cd;
+    color: #856404;
+}
